Criação do TabContent

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <title>Hermes Web</title>
 </head>
 
-<body class='skin-purple fixed sidebar-mini'>
+<body class='skin-red sidebar-mini'>
 
   <noscript>
     You need to enable JavaScript to run this app.
