Criando componente Spinner

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,12 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root" class="wrapper"></div>
-  
+
+  <script>
+    window.onload = function () {
+      alert("I JOJSODFS")
+    }
+  </script>
 </body>
 
 </html>
