--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,220 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>Hermes Web</title>
+
+  <style type="text/css">
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+    }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      font-size: 13px;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    .ipl-progress-indicator.available {
+      opacity: 0;
+    }
+
+    .ipl-progress-indicator {
+      background-color: #f5f5f5;
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      opacity: 1;
+      pointer-events: none;
+      -webkit-transition: opacity cubic-bezier(.4, 0, .2, 1) 436ms;
+      -moz-transition: opacity cubic-bezier(.4, 0, .2, 1) 436ms;
+      transition: opacity cubic-bezier(.4, 0, .2, 1) 436ms;
+      z-index: 9999;
+    }
+
+    .insp-logo-frame {
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: flex;
+      -webkit-flex-direction: column;
+      -moz-flex-direction: column;
+      flex-direction: column;
+      -webkit-justify-content: center;
+      -moz-justify-content: center;
+      justify-content: center;
+      -webkit-animation: fadein 436ms;
+      -moz-animation: fadein 436ms;
+      animation: fadein 436ms;
+      height: 98%;
+    }
+
+    .insp-logo-frame-img {
+      width: 140x;
+      height: 140px;
+      -webkit-align-self: center;
+      -moz-align-self: center;
+      align-self: center;
+      border-radius: 50%;
+    }
+
+    .ipl-progress-indicator-head {
+      background-color: #d73925;
+      height: 4px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .ipl-progress-indicator .first-indicator,
+    .ipl-progress-indicator .second-indicator {
+      background-color: #3e3d3d;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      top: 0;
+      position: absolute;
+      -webkit-transform-origin: left center;
+      -moz-transform-origin: left center;
+      transform-origin: left center;
+      -webkit-transform: scaleX(0);
+      -moz-transform: scaleX(0);
+      transform: scaleX(0);
+    }
+
+    .ipl-progress-indicator .first-indicator {
+      -webkit-animation: first-indicator 2000ms linear infinite;
+      -moz-animation: first-indicator 2000ms linear infinite;
+      animation: first-indicator 2000ms linear infinite;
+    }
+
+    .ipl-progress-indicator .second-indicator {
+      -webkit-animation: second-indicator 2000ms linear infinite;
+      -moz-animation: second-indicator 2000ms linear infinite;
+      animation: second-indicator 2000ms linear infinite;
+    }
+
+    .ipl-progress-indicator .insp-logo {
+      animation: App-logo-spin infinite 20s linear;
+      border-radius: 50%;
+      -webkit-align-self: center;
+      -moz-align-self: center;
+      align-self: center;
+    }
+
+    @keyframes App-logo-spin {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    @-webkit-keyframes fadein {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+      ;
+    }
+
+    @-moz-keyframes fadein {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+      ;
+    }
+
+    @keyframes fadein {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+      ;
+    }
+
+    @keyframes first-indicator {
+      0% {
+        transform: translate(0%) scaleX(0);
+      }
+      25% {
+        transform: translate(0%) scaleX(0.5);
+      }
+      50% {
+        transform: translate(25%) scaleX(0.75);
+      }
+      75% {
+        transform: translate(100%) scaleX(0);
+      }
+      100% {
+        transform: translate(100%) scaleX(0);
+      }
+      ;
+    }
+
+    @keyframes second-indicator {
+      0% {
+        transform: translate(0%) scaleX(0);
+      }
+      60% {
+        transform: translate(0%) scaleX(0);
+      }
+      80% {
+        transform: translate(0%) scaleX(0.6);
+      }
+      100% {
+        transform: translate(100%) scaleX(0.1);
+      }
+      ;
+    }
+  </style>
+
 </head>
 
-<body class='skin-red sidebar-mini'>
-
+<body class='skin-red sidebar-mini hold-transition'>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root" class="wrapper"></div>
+  <div class="ipl-progress-indicator" id="ipl-progress-indicator">
+    <div class="ipl-progress-indicator-head">
+      <div class="first-indicator"></div>
+      <div class="second-indicator"></div>
+    </div>
+    <div class="insp-logo-frame">
+      <svg width="500" class="insp-logo-frame-img" height="500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 350 350">
+        <defs>
+          <style>
+            .b0ffdbbc-91c8-441d-ab87-e0123fa1aff5 {
+              fill: none;
+              stroke: #dd4b39;
+              stroke-miterlimit: 10;
+              stroke-width: 5px;
+            }
+          </style>
+        </defs>
+        <title>logo-hermes</title>
+        <path class="b0ffdbbc-91c8-441d-ab87-e0123fa1aff5" d="M191.55,152.37v28.7H158.81V152.84s0-25.7-32.74-25.7V232.82s0,26.18,32.74,26.18V213.81h32.74v44.8c31.26,0,31.26-25.61,31.26-25.61V126.66C191.55,126.66,191.55,152.37,191.55,152.37Z"
+        />
+        <path class="b0ffdbbc-91c8-441d-ab87-e0123fa1aff5" d="M57.52,113.94c-1.13,4.5-12.07,35.35,22.33,54.75C73,170.11,62.39,166.9,60.25,166c0.33,2.12,4.17,33.32,39.62,37.48a24.5,24.5,0,0,1-18.5,3.8c3.23,5.38,12.48,20.08,34.91,22.67v-86.8C84.33,137,63.72,119,57.52,113.94Z"
+        />
+        <path class="b0ffdbbc-91c8-441d-ab87-e0123fa1aff5" d="M291.73,113.94c1.13,4.5,12.07,35.35-22.33,54.75,6.84,1.43,17.47-1.79,19.61-2.68-0.33,2.12-4.17,33.32-39.62,37.48a24.5,24.5,0,0,0,18.5,3.8c-3.23,5.38-12.48,20.08-34.91,22.67v-86.8C264.93,137,285.54,119,291.73,113.94Z"
+        />
+      </svg>
+    </div>
+  </div>
+  <div id="root">
+  </div>
 
   <script>
-    window.onload = function () {
-      alert("I JOJSODFS")
-    }
+
   </script>
 </body>
 
