--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class='skin-red sidebar-mini hold-transition'>
+<body class='skin-blue sidebar-mini hold-transition'>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
@@ -35,7 +35,7 @@
           <style>
             .b0ffdbbc-91c8-441d-ab87-e0123fa1aff5 {
               fill: none;
-              stroke: #dd4b39;
+              stroke:#3c8dbc;
               stroke-miterlimit: 10;
               stroke-width: 5px;
             }
