Criando tela de monitoramento de processos #2

--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,17 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="stylesheet" href="./css/hermes.css"/>
+
   <title>Hermes Web</title>
 
-  <style type="text/css">
-   
-  </style>
-
+  <link rel="stylesheet" href="/css/hermes.css" />
 </head>
 
 <body class='skin-blue sidebar-mini hold-transition'>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
+
   <div class="ipl-progress-indicator" id="ipl-progress-indicator">
     <div class="ipl-progress-indicator-head">
       <div class="first-indicator"></div>
@@ -35,7 +33,7 @@
           <style>
             .b0ffdbbc-91c8-441d-ab87-e0123fa1aff5 {
               fill: none;
-              stroke:#3c8dbc;
+              stroke: #3c8dbc;
               stroke-miterlimit: 10;
               stroke-width: 5px;
             }
@@ -55,6 +53,7 @@
   </div>
 
   <script>
+
   </script>
 </body>
 
