--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="/css/hermes.css" />
 </head>
 
-<body class='skin-yellow wysihtml5-supported sidebar-mini hold-transition'>
+<body class='skin-blue-light fluid wysihtml5-supported sidebar-mini hold-transition'>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
@@ -51,6 +51,9 @@
   </div>
   <div id="root">
   </div>
+
+  <script>
+  </script>
 </body>
 
 </html>
